--- a/app/src/main/res/layout/teacher_view_submissions.xml
+++ b/app/src/main/res/layout/teacher_view_submissions.xml
@@ -95,5 +95,31 @@
                 android:textColor="#000000" />
         </LinearLayout>
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            >
+            <Button
+                android:id="@+id/btnViewFile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="View File"
+                android:layout_marginRight="10dp"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="#990100"
+                />
+
+            <Button
+                android:id="@+id/btnEnterGrade"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Enter Grade"
+                android:layout_marginLeft="10dp"
+                android:textColor="#FFFFFF"
+                android:backgroundTint="#990100"
+                />
+        </LinearLayout>
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
