--- a/app/src/main/res/layout/fragment_student_marks.xml
+++ b/app/src/main/res/layout/fragment_student_marks.xml
@@ -10,17 +10,22 @@
 
 
     <!-- Title -->
+
     <TextView
         android:id="@+id/txtTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/inknut_antiqua_light"
-        android:text="My Schedule"
+        android:text="My Marks"
         android:textColor="#800000"
         android:textSize="20sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="134dp"
-        tools:layout_editor_absoluteY="69dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.11" />
 
     <Spinner
         android:id="@+id/spnSubject"
@@ -44,7 +49,6 @@
     <ListView
         android:layout_width="338dp"
         android:layout_height="459dp"
-        android:layout_marginTop="16dp"
         android:background="@drawable/search_background"
         android:divider="@android:color/transparent"
         android:dividerHeight="16dp"
@@ -54,9 +58,10 @@
 
         app:layout_constraintBottom_toTopOf="@id/spnSubject"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/spnSubject"
-        app:layout_constraintVertical_bias="0.008" />
+        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
