--- a/app/src/main/res/layout/fragment_registrar_schedule.xml
+++ b/app/src/main/res/layout/fragment_registrar_schedule.xml
@@ -48,10 +48,21 @@
                     android:textColor="#970D0D"
                     android:paddingBottom="8dp"/>
 
-                <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:prompt="@string/time_slot"/>
-                <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:prompt="@string/subject"/>
-                <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:prompt="@string/teacher"/>
-                <Spinner android:layout_width="match_parent" android:layout_height="wrap_content" android:prompt="@string/day"/>
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+
+                <Spinner
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
                 <Button
                     android:layout_width="wrap_content"
