--- a/app/src/main/res/layout/fragment_teacher_view_grade.xml
+++ b/app/src/main/res/layout/fragment_teacher_view_grade.xml
@@ -44,16 +44,17 @@
         android:id="@+id/layoutStats"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         app:layout_constraintTop_toBottomOf="@id/spnSubject"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"
         android:weightSum="2"
-        android:paddingHorizontal="16dp">
+        android:paddingHorizontal="16dp"
+        android:gravity="center_horizontal">
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="horizontal">
@@ -62,7 +63,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Class Avg:"
-                android:textSize="14sp"
+                android:textSize="20sp"
+                android:fontFamily="@font/alatsi"
                 android:textStyle="bold"
                 android:textColor="#000000" />
 
@@ -71,13 +73,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="65%"
-                android:textSize="14sp"
+                android:textSize="20sp"
+                android:fontFamily="@font/alatsi"
                 android:textColor="#000000"
                 android:layout_marginStart="4dp"/>
         </LinearLayout>
 
         <LinearLayout
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="horizontal"
@@ -87,7 +90,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Top Student:"
-                android:textSize="14sp"
+                android:textSize="20sp"
+                android:fontFamily="@font/alatsi"
                 android:textStyle="bold"
                 android:textColor="#000000" />
 
@@ -96,7 +100,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Student"
-                android:textSize="14sp"
+                android:textSize="20sp"
+                android:fontFamily="@font/alatsi"
                 android:textColor="#000000"
                 android:layout_marginStart="4dp"/>
         </LinearLayout>
