--- a/app/src/main/res/layout/list_item_student_schedule.xml
+++ b/app/src/main/res/layout/list_item_student_schedule.xml
@@ -22,28 +22,61 @@
         <!-- Subject Name -->
 
         <!-- Class Time -->
-
-        <TextView
-            android:id="@+id/txtSubjectName"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Subject: Math"
-            android:layout_gravity="left"
-            android:textColor="#B92F2F"
-            android:textSize="18sp"
-            android:textStyle="bold" />
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Subject:"
+                android:layout_gravity="left"
+                android:textColor="#B92F2F"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+            <TextView
+                android:id="@+id/txtSubjectName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Math"
+                android:layout_gravity="left"
+                android:textColor="#B92F2F"
+                android:textSize="18sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
-        <TextView
-            android:id="@+id/txtClassTime"
+
+
+
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="left"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Time:"
+                android:textSize="16sp"
+                android:textColor="#0277BD"
+                android:layout_marginTop="6dp"
+                android:textStyle="bold"  />
+            <TextView
+                android:id="@+id/txtClassTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="left"
 
-            android:text="Time: 08:00 - 09:30"
-            android:textSize="16sp"
-            android:textColor="#0277BD"
-            android:layout_marginTop="6dp"
-            android:textStyle="bold" />
+                android:text="08:00 - 09:30"
+                android:textSize="16sp"
+                android:textColor="#0277BD"
+                android:layout_marginTop="6dp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+
+
+
 
         <!-- Instructor Name -->
         <TextView
