--- a/app/src/main/res/layout/fragment_teacher_schedule.xml
+++ b/app/src/main/res/layout/fragment_teacher_schedule.xml
@@ -58,18 +58,21 @@
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="12dp" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvSchedule"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="#FFFFFF"
-            android:clipToPadding="false"
-            android:paddingTop="12dp"
+        <ListView
+            android:id="@+id/lvTeacherSchedual"
+            android:layout_width="338dp"
+            android:layout_height="459dp"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/search_background"
+            android:divider="@android:color/transparent"
+            android:dividerHeight="16dp"
             android:padding="8dp"
-            android:elevation="2dp"
-            android:overScrollMode="never"
-            android:scrollbars="vertical" />
+            android:scrollbars="vertical"
+            android:textColor="#000"
+            app:layout_constraintBottom_toTopOf="@+id/txtRoomNumber"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.534"
+            app:layout_constraintStart_toStartOf="parent" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
