--- a/app/src/main/res/layout/fragment_teacher_send_assignment.xml
+++ b/app/src/main/res/layout/fragment_teacher_send_assignment.xml
@@ -222,7 +222,9 @@
         android:textSize="17sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardContainer" />
+        app:layout_constraintTop_toBottomOf="@+id/cardContainer"
+        app:layout_constraintVertical_bias="0.23" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
