--- a/app/src/main/res/layout/fragment_teacher_schedule.xml
+++ b/app/src/main/res/layout/fragment_teacher_schedule.xml
@@ -23,7 +23,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Spinner
-        android:id="@+id/spnSubject"
+        android:id="@+id/spnDay"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -42,7 +42,7 @@
         android:padding="16dp"
         android:elevation="4dp"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/spnSubject"
+        app:layout_constraintTop_toBottomOf="@id/spnDay"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -56,12 +56,15 @@
             android:textStyle="bold"
             android:textSize="18sp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="12dp" />
+            android:layout_marginBottom="12dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <ListView
             android:id="@+id/lvTeacherSchedual"
-            android:layout_width="338dp"
-            android:layout_height="459dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_marginBottom="12dp"
             android:background="@drawable/search_background"
             android:divider="@android:color/transparent"
@@ -69,10 +72,10 @@
             android:padding="8dp"
             android:scrollbars="vertical"
             android:textColor="#000"
-            app:layout_constraintBottom_toTopOf="@+id/txtRoomNumber"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.534"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvSchedualDay" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
