--- a/app/src/main/res/layout/teacher_schedual_item.xml
+++ b/app/src/main/res/layout/teacher_schedual_item.xml
@@ -45,7 +45,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Day:"
+                android:text="Subject:"
                 android:textColor="#990100"
                 android:textStyle="bold" />
             <TextView
@@ -70,7 +70,7 @@
                 android:textColor="#990100"
                 android:textStyle="bold" />
             <TextView
-                android:id="@+id/subjectText"
+                android:id="@+id/tvSubject"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Math"
@@ -90,7 +90,7 @@
                 android:textColor="#990100"
                 android:textStyle="bold" />
             <TextView
-                android:id="@+id/classText"
+                android:id="@+id/tvClass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="9A"
@@ -111,7 +111,7 @@
                 android:textColor="#990100"
                 android:textStyle="bold" />
             <TextView
-                android:id="@+id/roomText"
+                android:id="@+id/tvRoom"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="301"
