--- a/app/src/main/res/layout/fragment_teacher_take_attendance.xml
+++ b/app/src/main/res/layout/fragment_teacher_take_attendance.xml
@@ -91,23 +91,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="4dp"
-            android:fontFamily="@font/alatsi"
-            android:text="Subject:"
-            android:textSize="20sp" />
-
-        <TextView
-            android:id="@+id/tvSubject"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:fontFamily="@font/alatsi"
-            android:text="Chemistry"
-            android:textSize="20sp"
-            android:textStyle="bold" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -118,6 +101,7 @@
             android:textSize="20sp" />
 
         <TextView
+            android:id="@+id/tvDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/alatsi"
@@ -135,109 +119,56 @@
         android:orientation="horizontal"
         app:layout_constraintTop_toBottomOf="@id/layoutSubjectDate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        >
 
         <TextView
             android:id="@+id/tvToday"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
             android:fontFamily="@font/alatsi"
             android:text="Monday"
             android:textColor="#990100"
             android:textSize="20sp"
+            android:layout_weight="1"
             android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/tvDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/alatsi"
-            android:text="May 8, 2025"
-            android:textColor="#990100"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/qrCodeImg"
+            android:layout_width="55dp"
+            android:layout_height="42dp"
+            android:contentDescription="App Logo"
+            android:scaleType="centerCrop"
+            android:src="@drawable/qr_code" />
+
     </LinearLayout>
 
-    <!-- ScrollView with Student Entries -->
-    <ScrollView
-        android:id="@+id/svTeacherViewAttendance"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvAttendanceList"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
-        android:fillViewport="true"
+        android:layout_marginBottom="20dp"
         app:layout_constraintTop_toBottomOf="@id/layoutDayHeader"
         app:layout_constraintBottom_toTopOf="@id/btnSave"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"/>
 
-        <LinearLayout
-            android:id="@+id/studentListContainer"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
 
-            <!-- Example Student Entry -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="6dp"
-                android:background="@drawable/rounded_background"
-                android:gravity="center_vertical"
-                android:orientation="horizontal"
-                android:padding="8dp">
-
-                <TextView
-                    android:id="@+id/tvStudentName"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:text="Ahmed Khalid"
-                    android:textColor="#0044CC"
-                    android:textSize="16sp" />
-
-                <RadioGroup
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="#990100"
-                        android:text="Present" />
-
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="#990100"
-                        android:text="Absent" />
-
-                    <RadioButton
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:buttonTint="#990100"
-                        android:text="Late" />
-                </RadioGroup>
-            </LinearLayout>
-
-        </LinearLayout>
-    </ScrollView>
-
-    <!-- Save Button -->
     <Button
         android:id="@+id/btnSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="72dp"
+        android:layout_width="135dp"
+        android:layout_height="53dp"
+        android:layout_marginBottom="76dp"
         android:backgroundTint="#990100"
+        android:fontFamily="@font/alatsi"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
         android:text="Save"
         android:textColor="#FFFFFF"
+        android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
